--- a/intex2/Pages/Account/_Layout.cshtml
+++ b/intex2/Pages/Account/_Layout.cshtml
@@ -1,5 +1,6 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!--Authentication shared layout-->
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,11 +25,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        @*@<li class="nav-item">
-                                <a class="nav-link text-dark" href="../Pages/MomiasDatabase">Burial Database</a>
-                            </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Users/MomiasDatabase">Burial Database</a>
+                        </li>
                         <li class="nav-item ml-auto">
-                            @*<a class="nav-link text-" href="/Account/Login">Login</a>*@
                             <a class="nav-link text-dark" href="/Account/Login">Login</a>
                         </li>
                     </ul>
