--- a/intex2/Pages/Roles/_Layout.cshtml
+++ b/intex2/Pages/Roles/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,19 +17,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                    <ul class="navbar-nav flex-grow-1">      
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        @*@<li class="nav-item">
-                                <a class="nav-link text-dark" href="../Pages/MomiasDatabase">Burial Database</a>
-                            </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Users/List">Users</a>
+                        </li>
                         <li class="nav-item ml-auto">
-                            @*<a class="nav-link text-" href="/Account/Login">Login</a>*@
-                            <a class="nav-link text-dark" href="/Account/Login">Login</a>
+                            <a class="nav-link text-dark" href="/Account/Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
