--- a/intex2/Pages/_Layout.cshtml
+++ b/intex2/Pages/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -24,12 +25,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        @*@<li class="nav-item">
-                                <a class="nav-link text-dark" href="../Pages/MomiasDatabase">Burial Database</a>
-                            </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Users/MomiasDatabase">Burial Database</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Users/SingleEntry">Add Records</a>
+                        </li>
                         <li class="nav-item ml-auto">
-                            @*<a class="nav-link text-" href="/Account/Login">Login</a>*@
-                            <a class="nav-link text-dark" href="/Account/Login">Login</a>
+                            <a class="nav-link text-dark" href="/Account/Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -41,6 +44,9 @@
             @RenderBody()
         </main>
     </div>
+
+    <!--Content of the Hoem page for the user-->
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
