--- a/intex2/Pages/_ViewImports.cshtml
+++ b/intex2/Pages/_ViewImports.cshtml
@@ -1,8 +1,7 @@
-﻿@using intex2
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using intex2.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using Microsoft.EntityFrameworkCore
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-
+@using intex2.Pages
